--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>netty-handler</artifactId>
             <version>4.1.11.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.1.2.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>io.reactivex</groupId>
             <artifactId>rxjava</artifactId>
